Fix tracklist modal Unicode encoding and grid alignment issues

--- a/assets/scss/components/_modals.scss
+++ b/assets/scss/components/_modals.scss
@@ -133,6 +133,16 @@
     display: inline;
   }
   
+  // Producer links container - keeps all producer links together
+  .producer-links-container {
+    display: inline;
+  }
+  
+  // Individual producer type links
+  .tracklist-producer-type-link {
+    display: inline;
+  }
+  
   // Rating content container
   .rating-content {
     display: inline;
